--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="en xmlns:th=http://www.thymeleaf.org">
+<html lang="en xmlns:th=http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Create your Post</title>
-  <th:block th:include="partials/navbar :: styling"></th:block>
+    <th:block th:include="partials/bootstrap :: styling"></th:block>
+
 </head>
 <body>
-<form th:action="@{/posts/create}" th:method="POST">
-<div>
+<nav th:replace="partials/navbar :: navbar"></nav>
+<form th:action="@{/posts/create}" th:method="POST" th:object="${newPost}">
+    <div class="form-group">
 <label for="title">Title</label>
-<input type="email" id="title" name="title">
+<input type="text" id="title" name="title" th:field="*{title}">
 </div>
 
-<div>
+    <div class="form-group">
 <label for="body">Body</label>
-<input type="body" id="body" name="body">
+        <textarea class="form-control" id="body" rows="3" name="body" th:field="*{body}"></textarea>
 </div>
     <button type="submit">Submit</button>
 </form>
-<th:block th:replace="partials/footer :: scripts"></th:block>
+<!--<th:block th:replace="partials/footer :: scripts"></th:block>-->
 </body>
 </html>
