--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en xmlns:th=http://www.thymeleaf.org">
+<html lang="en xmlns:th=http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Create your Post</title>
-    <th:block th:include="partials/navbar :: styling"></th:block>
+    <title>Edit your Post</title>
+    <th:block th:include="partials/bootstrap :: styling"></th:block>
 </head>
 <body>
-<form th:action=`/posts/${postId}/edit` th:method="POST">
+<nav th:replace="partials/navbar :: navbar"></nav>
+<form th:action="@{/posts/{id}/edit (id = ${postToEdit.getById()})}" th:method="POST" th:object="${postToEdit}">
     <div>
         <label for="title">Title</label>
-        <input type="email" id="title" name="title">
+        <input type="text" class="form-control" id="title" name="title" th:value="${postToEdit.getTitle()}" th:fields="*{title}">
     </div>
-
-    <div>
+    <input type="hidden" th:value="${postToEdit.getId()}" th:field="*{id}">
+    <div class="form-group">
         <label for="body">Body</label>
-        <input type="body" id="body" name="body">
+        <textarea class="form-control" id="body" rows="3" name="body" th:text="${postToEdit.getBody()}" th:field="*{body}"></textarea>
     </div>
     <button type="submit">Submit</button>
 </form>
-<th:block th:replace="partials/footer :: scripts"></th:block>
+<th:block th:replace="partials/bootstrap :: scripts"></th:block>
 </body>
 </html>
