--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,10 +1,18 @@
+
+
 <!DOCTYPE html>
-<html lang="en xmlns:th=http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <th:block th:include="partials/bootstrap :: styling"></th:block>
 </head>
 <body>
-<!--<h1 th:each="title : ${title}" th:text="${title}"></h1>-->
+<nav th:replace="partials/navbar :: navbar"></nav>
+<div class="card-body" th:each="post : ${allPosts}">
+    <h5 class="card-title" th:text="${post.getTitle()}">Card title</h5>
+    <p class="card-text" th:text="${post.getBody}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+</div>
+<th:block th:include="partials/bootstrap :: scripts"></th:block>
 </body>
 </html>
