--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en xmlns:th=http://www.thymeleaf.org">
+<html lang="en xmlns:th=http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Post</title>
+    <th:block th:include="partials/bootstrap :: styling"></th:block>
 </head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
 <div class="card" style="width: 18rem;">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
         <h5 class="card-title" th:text="${singlePost.getTitle()}">Card title</h5>
         <p class="card-text "th:text="${singlePost.getBody()}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
+    <h5>You can email this user at: <span th:text="${singlePost.getUser().getEmail()}"></span></h5>
 </div>
+<th:block th:include="partials/bootstrap :: scripts"></th:block>
 </body>
 </html>
