--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -23,17 +23,17 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
-<!--            <li class="nav-item" sec:authorize="isAuthenticated()">-->
-<!--                <form th:action="@{/logout}" th:method="post">-->
-<!--                    <button class="btn-link btn" style="margin-top: 8px">Logout</button>-->
-<!--                </form>-->
-<!--            </li>-->
-<!--            <li class="nav-item" sec:authorize="!isAuthenticated()">-->
-<!--                <a class="nav-link" href="/login">Login</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item nav-link" sec:authorize="isAuthenticated()">-->
-<!--                Hi, <span th:text="${#authentication.principal.username}"></span>-->
-<!--            </li>-->
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" th:method="post">
+                    <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+                </form>
+            </li>
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item nav-link" sec:authorize="isAuthenticated()">
+                Hi, <span th:text="${#authentication.principal.username}"></span>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
