--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
+<h1>Latest Posts</h1>
 <div class="card-body" th:each="post : ${allPosts}">
     <h5 class="card-title" th:text="${post.getTitle()}">Card title</h5>
     <p class="card-text" th:text="${post.getBody}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
